# kNNcuda

./: .gitignore  CMakeLists.txt  README.md  neuerPlan.txt
cudaExamples/: NN.cu  matMult.cu
include/: LBKdTree.hpp  PointArray.hpp  calcNormals.h  calcNormalsCuda.h  calcNormalsCuda.hpp  helper_cuda.h  kNN.h
presentation/: beamerthemeUOS.sty  slides.aux  slides.nav  slides.out  slides.tex  slides.toc  uoscolors.sty  uoslogo.sty  vorbesprechung
presentation/Images/: sources
presentation/experiment_results/: GPU_Ransac.csv  LVR_GPU.csv  LVR_GPU.ods  bruteforce_plot.xlsx  result_file_pca.csv  result_lvr.csv  results_bruteforce.csv
presentation/images/: kdtree.vsd  kdtree_procedure.vsd  knn.vsd  knn_procedure.vsd  radius_search.vsd
src/: LBKdTree.cpp  NN.cu  a.out  calcNormals.cu  calcNormalsCuda.cu  cuda_test.cu  kNN.cu  kd_tree_gpu.cu  main.cpp  main.cu  pool_test.cpp
